--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -14,12 +14,12 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-}
-
-body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Georgia', serif;
+  line-height: 1.6;
+  font-size: 1.125rem;
+  padding: 1rem;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -39,4 +39,10 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+main {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 2rem 1rem;
 }
