--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -44,6 +44,9 @@ html {
 }
 
 body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
   max-width: 100vw;
   overflow-x: hidden;
   color: var(--foreground);
@@ -51,7 +54,6 @@ body {
   font-family: $font-family-base;
   line-height: 1.6;
   font-size: $font-size-base;
-  padding: 1rem;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
@@ -75,6 +77,7 @@ a {
 
 main {
   padding: 1.5rem 1rem;
+  flex: 1;
 
   @media (min-width: 768px) {
     max-width: 640px;
@@ -85,4 +88,12 @@ main {
   @media (min-width: 1024px) {
     max-width: $content-max-width;
   }
+}
+
+.layout {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
 }
