Task02 | style | Trocando cor de links do footer para uma com com melhor contraste

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,8 +1,8 @@
 $footer-fg: #c8c8c8;
 $border-color: #ddd;
-$link-default: #1e88e5;
+$link-default: #cccccc;
 $link-visited: #5c6bc0;
-$link-hover: #1565c0;
+$link-hover: #ffffff;
 $link-active: #0d47a1;
 
 .footer {
