--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -1,6 +1,7 @@
 .navbar {
-  background-color: #333;
-  padding: 0.75rem 1.5rem;
+  position: relative;
+  padding: 1rem;
+  background-color: #383838;
 }
 
 .list {
@@ -9,6 +10,12 @@
   gap: 1rem;
   margin: 0;
   padding: 0;
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    display: none;
+    margin-top: 1rem;
+  }
 }
 
 .list li a {
@@ -27,4 +34,20 @@
 
 .list li a:active {
   background-color: #777;
+}
+
+.toggle {
+  display: none;
+  font-size: 1.5rem;
+  background: none;
+  border: none;
+  cursor: pointer;
+
+  @media (max-width: 768px) {
+    display: block;
+  }
+}
+
+.open {
+  display: flex !important;
 }
