--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -97,3 +97,11 @@ main {
   margin: 0;
   padding: 0;
 }
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  max-width: 600px;
+  margin: 0 auto;
+}
